State working with machine, machine driver and all copy but not put
